k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website-api
  namespace: personal-website-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website-api
  template:
    metadata:
      labels:
        app: personal-website-api
    spec:
      containers:
      - name: personal-website-api
        image: kevinlutzer/personal-website-api:1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
