k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-api
  namespace: personal-website-api
spec:
  type: LoadBalancer
  selector:
    app: personal-website-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30038
